--- a/compose.yaml
+++ b/compose.yaml
@@ -1,3 +1,4 @@
+
 services:
   nginx:
     image: nginx:1.27-alpine
@@ -20,8 +21,12 @@ services:
       - ./docker/php/conf.d/99-memory.ini:/usr/local/etc/php/conf.d/99-memory.ini:ro
     environment:
       APP_ENV: dev
+      # URL interne Docker vers Ollama (pas exposé)
+      OLLAMA_BASE_URL: "http://ollama:11434"
+      OLLAMA_MODEL: "mistral"
     networks:
       - appnet
+      - llmnet
 
   db:
     image: mysql:8.4
@@ -37,7 +42,6 @@ services:
     networks:
       - appnet
 
-
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     ports:
@@ -52,9 +56,96 @@ services:
     networks:
       - appnet
 
-
+  # --- OLLAMA (Option A : non exposé) ---
+  ollama:
+    image: ollama/ollama:latest
+    container_name: ollama
+    restart: unless-stopped
+    volumes:
+      - ollama_data:/root/.ollama
+    networks:
+      - llmnet
+    # IMPORTANT : pas de ports => inaccessible depuis l’hôte
+    # dns:
+      # - 1.1.1.1
+      # - 8.8.8.8
+    
 volumes:
   dbdata:
+  ollama_data:
 
 networks:
   appnet:
+  # Réseau interne dédié : seul php <-> ollama communiquent
+  llmnet:
+    driver: bridge
+    internal: true
+
+
+
+
+
+
+
+
+
+# services:
+#   nginx:
+#     image: nginx:1.27-alpine
+#     ports:
+#       - "8080:80"
+#     volumes:
+#       - ./:/var/www/html:cached
+#       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+#     depends_on:
+#       - php
+#     networks:
+#       - appnet
+
+#   php:
+#     build:
+#       context: .
+#       dockerfile: docker/php/Dockerfile
+#     volumes:
+#       - ./:/var/www/html:cached
+#       - ./docker/php/conf.d/99-memory.ini:/usr/local/etc/php/conf.d/99-memory.ini:ro
+#     environment:
+#       APP_ENV: dev
+#     networks:
+#       - appnet
+
+#   db:
+#     image: mysql:8.4
+#     environment:
+#       MYSQL_DATABASE: app
+#       MYSQL_USER: app
+#       MYSQL_PASSWORD: app
+#       MYSQL_ROOT_PASSWORD: root
+#     ports:
+#       - "3307:3306"
+#     volumes:
+#       - dbdata:/var/lib/mysql
+#     networks:
+#       - appnet
+
+
+#   phpmyadmin:
+#     image: phpmyadmin/phpmyadmin
+#     ports:
+#       - "8081:80"
+#     environment:
+#       PMA_HOST: db
+#       PMA_PORT: 3306
+#       PMA_USER: app
+#       PMA_PASSWORD: app
+#     depends_on:
+#       - db
+#     networks:
+#       - appnet
+
+
+# volumes:
+#   dbdata:
+
+# networks:
+#   appnet:
