--- a/.env
+++ b/.env
@@ -26,6 +26,11 @@ APP_SHARE_DIR=var/share
 DEFAULT_URI=http://localhost
 ###< symfony/routing ###
 
+###> ai/ollama ###
+OLLAMA_BASE_URL="http://localhost:11434"
+OLLAMA_MODEL="llama3"
+###< ai/ollama ###
+
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
