--- a/.env
+++ b/.env
@@ -27,9 +27,13 @@ DEFAULT_URI=http://localhost
 ###< symfony/routing ###
 
 ###> ai/ollama ###
-OLLAMA_BASE_URL="http://localhost:11434"
-OLLAMA_MODEL="llama3"
+OLLAMA_BASE_URL="http://ollama:11434"
+OLLAMA_MODEL="llama3.1:8b"
 ###< ai/ollama ###
+
+# Symfony host → http://localhost:11434
+# Symfony docker → http://ollama:11434
+
 
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
