--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -14,6 +14,10 @@ server {
     fastcgi_pass php:9000;
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     fastcgi_param DOCUMENT_ROOT $document_root;
+
+    fastcgi_connect_timeout 10s;
+    fastcgi_send_timeout 180s;
+    fastcgi_read_timeout 180s;
   }
 
   client_max_body_size 20M;
